<resources>
    <string name="app_name">Feed Articles</string>
    <string name="register_title">Create your account</string>
    <string name="login_title">Sign in</string>
    <string name="detail_title">About an article</string>
    <string name="edit_title">Edit an article</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="validate">Validate</string>
    <string name="already_account">I already have an account</string>
    <string name="no_account">I don\'t have an account</string>
    <string name="welcome_title">Welcome</string>
    <string name="product_title"><u>Title</u></string>
    <string name="product_category">Category</string>
    <string name="product_description">Description</string>
    <string name="filter">Filter</string>
    <string name="new_article">New article</string>
    <string name="logout">Log out</string>
    <string name="create_article_title">Create an article</string>
    <string name="description_label">Description</string>
    <string name="image_label">Url image</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="edit_label">Edit an article</string>
    <string name="confirm_edit_label">Confirm changes</string>
    <string name="sport">Sport</string>
    <string name="manga">Manga</string>
    <string name="various">Various</string>
    <string name="unknown">Unknown</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>