<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connexionActivities.LoginActivity">
    <TextView
        android:id="@+id/tv_login_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:theme="@style/FirstTitleTheme"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_title2"
        android:theme="@style/AppNameTitleTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title1"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title1" />

    <TextView
        android:id="@+id/tv_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/LabelTheme"
        android:text="@string/username"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title2"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title2" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_title2"
        app:layout_constraintStart_toStartOf="@+id/tv_login_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_username" />

    <TextView
        android:id="@+id/tv_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:theme="@style/LabelTheme"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/et_login_username"
        app:layout_constraintTop_toBottomOf="@+id/et_login_username" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_login_username"
        app:layout_constraintStart_toStartOf="@+id/tv_login_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_password" />


    <Button
        android:id="@+id/btn_login_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/validate"
        android:theme="@style/ButtonActionTheme"
        app:cornerRadius="10dp"
        android:paddingHorizontal="42dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <TextView
        android:id="@+id/tv_login_noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:fontFamily="@font/nunito"
        android:text="@string/no_account"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_validate"
        app:layout_constraintStart_toStartOf="@+id/btn_login_validate"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_validate" />
</androidx.constraintlayout.widget.ConstraintLayout>