<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailsItemActivities.EditItemDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:focusable="true"
        >
        <TextView
            android:id="@+id/tv_editItemDetail_firstTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/FirstTitleTheme"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:text="@string/edit_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_editItemDetail_secondTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textStyle="italic"
            android:theme="@style/SecondTitleTheme"
            app:layout_constraintEnd_toEndOf="@+id/tv_editItemDetail_firstTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_editItemDetail_firstTitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_editItemDetail_firstTitle" />

        <ImageView
            android:id="@+id/img_editItemDetail_picture"
            android:layout_width="300dp"
            android:layout_height="155dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/tv_editItemDetail_secondTitle"
            app:layout_constraintTop_toBottomOf="@+id/et_editItemDetail_urlImage"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <EditText
            android:id="@+id/et_editItemDetail_itemTitle"
            android:maxLength="80"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/product_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/img_editItemDetail_picture"
            app:layout_constraintStart_toStartOf="@+id/img_editItemDetail_picture"
            app:layout_constraintTop_toBottomOf="@+id/img_editItemDetail_picture" />

        <EditText
            android:id="@+id/et_editItemDetail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito"
            android:text="@string/product_description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/img_editItemDetail_picture"
            app:layout_constraintStart_toStartOf="@+id/et_editItemDetail_itemTitle"
            app:layout_constraintTop_toBottomOf="@+id/et_editItemDetail_itemTitle" />

        <Button
            android:id="@+id/btn_editItemDetail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="22dp"
            android:paddingVertical="8dp"
            android:text="@string/back"
            android:theme="@style/ButtonActionTheme"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fl_editItemDetail_rvCategory"
            app:layout_constraintTop_toBottomOf="@+id/fl_editItemDetail_rvCategory" />

        <Button
            android:id="@+id/btn_editItemDetail_editItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:paddingHorizontal="22dp"
            android:paddingVertical="8dp"
            android:text="@string/confirm_edit_label"
            android:theme="@style/ButtonActionTheme"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/fl_editItemDetail_rvCategory"
            app:layout_constraintTop_toTopOf="@+id/btn_editItemDetail_back" />

        <EditText
            android:id="@+id/et_editItemDetail_urlImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/nunito_medium"
            android:inputType="text"
            android:text="@string/image_label"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/img_editItemDetail_picture"
            app:layout_constraintStart_toStartOf="@+id/tv_editItemDetail_secondTitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_editItemDetail_secondTitle" />


        <FrameLayout
            android:id="@+id/fl_editItemDetail_rvCategory"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/et_editItemDetail_description"
            app:layout_constraintStart_toStartOf="@+id/tv_editItemDetail_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_editItemDetail_category"
            />

        <TextView
            android:id="@+id/tv_editItemDetail_category"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_category"
            android:fontFamily="@font/nunito_medium"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/et_editItemDetail_description"
            app:layout_constraintTop_toBottomOf="@+id/et_editItemDetail_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
